--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     height: 100%;
 }
 .slide0{
-    background-image:url("http://beontea.com/wp-content/uploads/2020/06/Beontea_Banner-copy.jpg");
+    background-image:url("https://user-images.githubusercontent.com/76869545/132176742-ff20f3bc-b163-4fc8-a0ed-7a438c6f8152.jpg");
     width: 100%;
     height:100vh;
     background-position: center;
@@ -35,7 +35,7 @@ body{
     padding: 10px;
 }
 .slide1{
-    background-image:url("http://beontea.com/wp-content/uploads/2019/07/slider2.jpg");
+    background-image:url("https://user-images.githubusercontent.com/76869545/132176760-2d7d6e07-c4b4-4a5a-8cf6-f1ab576c23c5.jpg");
     width: 100%;
     height:100vh;
     background-position: center;
@@ -53,7 +53,7 @@ body{
     
 }
 .slide3{
-    background-image:url("http://beontea.com/wp-content/uploads/2019/07/Slider1.jpg");
+    background-image:url("https://user-images.githubusercontent.com/76869545/132176803-13c776a3-706f-44c9-8967-f076672f570c.jpg");
     width: 100%;
     height:100vh;
     background-position: center;
