--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ body{
     
 } 
 #about{
-    background-image: url("http://beontea.com/wp-content/uploads/2019/07/c2-1.jpg?id=3834");
+    background-image: url("https://user-images.githubusercontent.com/76869545/132180927-747e54ed-2f78-44a3-ab35-7e28a89f84d8.jpg");
     width: 100%;
     height:100vh;
     background-position: center;
@@ -190,7 +190,7 @@ body{
     padding-left: 30px;
 }
 #franchise{
-    background-image: url("http://beontea.com/wp-content/uploads/2019/07/franchise1.jpg");
+    background-image: url("https://user-images.githubusercontent.com/76869545/132180964-c7a3963d-9bf1-4bef-a47e-82a4e10a3339.jpg");
     width: 100%;
     height:100vh;
     background-position: center;
